# cpp-volume-controllers

./: .env.example  .gitignore  CMakeLists.txt  COMPILE.md  ENV_IMPLEMENTATION.md  LICENSE  README.md
cmake/: ParseEnv.cmake
cmake/macos/: Info.plist.in
cmake/windows/: GenerateIco.ps1  app_icon.rc.in
src/: app_behavior_mac.mm  app_config.h  main.cpp  osd_window.cpp  osd_window.h  osd_window_mac.mm  set_bundle_icon_mac.mm  spotify_client.cpp  spotify_client.h  tray_manager.cpp  tray_manager.h  volume_handler.cpp  volume_handler.h  volume_handler_factory.h  volume_handler_mac.h  volume_handler_mac.mm  volume_handler_win.cpp  volume_handler_win.h
src/implementation/: README.md  app_settings.cpp  app_settings.h  audio_ducker.cpp  audio_ducker.h  settings_dialog.cpp  settings_dialog.h
src/input/: volume_handler.h  volume_handler_mac.mm  volume_handler_win.cpp
src/proto/spotify/clienttoken/data/v0/: connectivity.proto
src/settings/: app_settings.h
src/spotify/: spotify_client.cpp  spotify_client.h
src/ui/: osd_window.cpp  osd_window.h  osd_window_mac.mm  settings_dialog.cpp  settings_dialog.h  tray_manager.cpp
